style.css
/* First blue box of the page */

.first-column{
    background-color: #1F2937;
    padding: 48px;
    display: flex;
    flex-direction: column;
    flex: 1;
}

/* header flex adjustement */
.header{
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 48px;
}

ul{
    display: flex;
    gap: 2em;
}

/* title and image flex adjustment */
.content-first{
    display: flex;
    justify-content: space-between;
    padding: 48px;
}

/* Title, subtext, button are squeezed to maintain the design */
.left-content{
    display: flex;
    flex-direction: column;
    width: 400px;
    gap: 10px;
}

.logo{
    font-size: 24px;
    font-weight: 700;
    font-family: "DM Sans";
    color: #E5E7EB;
}

.title, .subtext, a{
    font-family: "DM Sans";
    color: #E5E7EB;
}

.title{
    font-size: 48px;
    font-weight: 700;
}

.subtext, a{
    font-size: 18px;
    text-decoration: none;
}

ul{
    list-style-type: none;
    padding: 0;
    margin: 0;
}

p, img{
    margin: 0;
    padding: 0;
}

img{
    width: 400px;
    height: 250px;
    border-radius: 5px;
}

button{
    background-color: #3882F6;
    text-align: center;
    color: #E5E7EB;
    border-radius: 5px;
    width: 100px;
}

/* Second box of the page */
.second-column{
    font-family: "DM Sans";
    text-align: center;
    margin: 48px;
}

/* title head */
.information{
    color: #1F2937;
    font-size: 36px;
    font-weight: 700;
}

/* bundle of image and text */
.img-content{
    display: flex;
    justify-content: center;
    gap: 52px;
}

.batman-image{
    width: 100px;
    height: 100px;
}

.info{
    width: 100px;
}

.text{
    font-size: 18px;
    color: #1F2937;
}

